--- a/css/_pros.scss
+++ b/css/_pros.scss
@@ -230,6 +230,11 @@
         margin-top: 50px;
     }
 
+    .firstItem {
+        padding-top: 10px;
+        width: 104px;
+    }
+
     .svgItems {
         fill: white;
         transition: .3s;
