--- a/css/_welcome.scss
+++ b/css/_welcome.scss
@@ -1,249 +1,108 @@
-.welcomePage {
-    background-image: url(../assets/mainBg.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
+.mail {
+    position: fixed;
+    bottom: 15%;
+    left: 1%;
+    transform: rotate(-90deg);
+    z-index: 6;
+    color: rgb(255, 255, 255);
+    mix-blend-mode: difference;
 
-    .container {
-        height: 100vh;
-        padding-top: 35px;
-        padding-bottom: 70px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+    &:hover {
+        color: $accentColor;
     }
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-}
-
-.burger {
-    position: fixed;
-    top: 35px;
-    left: calc((100vw - 1110px) / 2 + 1089px);
-    z-index: 10;
-}
-
-.headerNav {
-    z-index: -1;
-    position: fixed;
-    left: 0;
-    top: 0;
-    display: flex;
-    align-items: center;
-    transition: background-color .5s;
 }
 
 .logo {
-    z-index: 7;
+    height: 100px;
+    width: 100px;
 }
 
-.navList {
-    width: 100vw;
+
+
+
+.welcome {
+    background: $darkBg1;
+    color: $brightText;
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.75);
-    justify-content: space-around;
-    align-items: center;
-    font-weight: 300;
-    text-transform: uppercase;
-    transition: .5s ease-in-out;
-    overflow-x: hidden;
-    font-family: Intro;
-    font-size: 20px;
-    z-index: -5;
-    padding: 100px 0;
-    opacity: 0;
-}
-
-.navListVisible {
-    z-index: 8;
-    opacity: 1;
-}
-
-.navItem {
-    text-shadow: 1.5px 2.598px 2px rgba(0, 0, 0, 0.75);
-    text-align: center;
-    transform: translateX(1400px);
-    transition: .3s;
-}
-
-.no-margin {
-    margin-right: 0;
-}
-
-.navItem:hover {
-    color: $yellow;
-}
-
-@keyframes navItemAnim {
-    from {
-        transform: translateY(-150vh);
-    }
-
-    to {
-        transform: translateY(0);
-    }
-}
-
-@keyframes navItemAnimOut {
-    from {
-        transform: translateY(0px);
-    }
-
-    to {
-        transform: translateY(-150vh);
-    }
-}
-
-.gold {
-    color: $yellow;
-}
-
-.navItem:last-child {
-    margin-right: 0;
-}
-
-.main {
-    margin-top: 30px;
-
-    h1 {
-        font-size: 44px;
-        text-transform: uppercase;
-        line-height: 1.2;
-        font-family: 'Russo One';
-        letter-spacing: 5px;
-        text-align: right;
-        max-width: 700px;
-
-        span {
-            color: $yellow;
-        }
-    }
-
-    p {
-        font-size: 20px;
-        margin-top: 30px;
-        margin-bottom: 45px;
-        color: #d7d4d5;
-    }
-
-    .navLink {
-        @include buttonStyle;
-        display: block;
-        padding-top: 8px;
-        margin-left: 50%;
-        margin-right: 0;
-        transform: translateX(-50%);
-    }
-}
-
-.mainFooter {
-    margin-top: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.contacts {
-    font-weight: 300;
-}
-
-.socialMedia {
+    position: relative;
     display: flex;
     align-items: center;
     
-    img {
-        margin-right: 20px;
+    .container {
+        width: 100%;
+        flex-direction: column;
     }
 
-    img:last-child {
-        margin-right: 0;
-    }
-}
-
-.shareIcon {
-    cursor: pointer;
-    transition: .2s;
-}
-
-.shareIcon:hover {
-    transform: scale(1.2);
-}
-
-.mediaItem {
-    transition: .2s;
-    opacity: 0;
-    cursor: pointer;
-}
-
-.mediaItem:hover {
-    transform: scale(1.2);
-}
-
-@keyframes mediaAnimIn {
-    from {
-        opacity: 0;
+    h1 {
+        margin-bottom: 50px;
     }
 
-    to {
-        opacity: 1;
+    span {
+        color: $accentColor;
     }
 }
 
-@keyframes mediaAnimOut {
-    0% {
-        opacity: 1;
+.situations {
+    position: relative;
+    height: 100vh;
+}
+
+.situation {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    left: -100vw;
+    background: url(../img/countries.png) no-repeat center 60%, $darkBg1;
+    color: $brightText;
+    display: flex;
+    align-items: center;
+
+    .container {
+        width: 100%;
+        div {
+            margin-top: 65px;
+            display: flex;
+            justify-content: space-between;
+            
+            .title2 {
+                color: $accentColor;
+                margin-bottom: 20px;
+            }
+        }
     }
 
-    50% {
-        opacity: 0.5;
-    }
-
-    100% {
-        opacity: 0;
+    span {
+        color: $accentColor;
     }
 }
 
+.situation1 {
+    position: absolute;
+    z-index: 1;
+    
+    left: 100vw;
+    height: 100vh;
+    width: 100vw;
+    background: url(../img/countries.png) no-repeat center 60%, $darkBg1;
+    color: $brightText;
+    display: flex;
+    align-items: center;
 
-
-.arrow {
-    margin-right: auto;
-    animation: arrowAnim 1s alternate infinite;
-}
-
-@keyframes arrowAnim {
-    0% {
-        transform: translateY(0px);
+    .container {
+        width: 100%;
+        div {
+            margin-top: 65px;
+            display: flex;
+            justify-content: space-between;
+            
+            .title2 {
+                color: $accentColor;
+                margin-bottom: 20px;
+            }
+        }
     }
 
-    50% {
-        transform: translateY(-10px);
+    span {
+        color: $accentColor;
     }
-
-    100% {
-        transform: translateY(0px);
-    }
-}
-
-.shareIconPath {
-    transition: .2s;
-}
-
-.burgerIcon {
-    transform-origin: center;
-    transform: scale(1);
-    transition: .3s;
-}
-
-.crossIcon {
-    transform-origin: center;
-    transform: scale(0);
-    transition: .3s;
-    x: 8px;
 }
