--- a/css/style.scss
+++ b/css/style.scss
@@ -1,11 +1,7 @@
-@import '_variables';
-@import '_mixins';
-@import '_welcome';
-@import '_aboutUs';
-@import '_problem';
-@import '_audience';
-@import '_future';
-@import '_pros';
+
+@import './variables';
+@import './welcome';
+@import './problem';
 
 html {
     box-sizing: border-box; /* width и height включают в себя значения полей и границ */
@@ -19,21 +15,18 @@ html {
 }
 
 body {
-    overflow-x: hidden;
-    letter-spacing: 1px;
-    scroll-behavior: smooth;
     min-width: 320px; /* body не адаптируется под ширину экрана менее 1000px */
-    font-family: "Roboto condensed", sans-serif; /* основной шрифт */
+    background: $darkBg1; /* основной цвет фона */
+    font-family: "Monserrat", sans-serif; /* основной шрифт */
     font-size: 16px; /* основной размер шрифта */
-    line-height: 1.3; /* высота линии для всего документа */
-    color: $white; /* основной цвет шрифта */
-    background-color: white;
-    text-shadow: -1px 1px 2px black
+    line-height: 1.5; /* высота линии для всего документа */
+    color: #000; /* основной цвет шрифта */
+    overflow-x: hidden;
+    padding-bottom: 103px;
 }
 
-h1, h2, h3, p, ul {
-    margin: 0;
-    padding: 0;
+body.modal-active {
+    overflow: hidden;
 }
 
 body.modal-active {
@@ -49,8 +42,13 @@ a {
     color: inherit; /* позволяет наследовать цвет шрифта от родительского элемента */
 }
 
-ul {
-    list-style-type: none;
+li {
+    display: inline; /* располагает пункты горизонтально */
+}
+
+h1, h2, h3, h4, p, ul {
+    margin: 0;
+    padding: 0;
 }
 
 .visually-hidden { /* доступно скрывает элемент */
@@ -65,14 +63,7 @@ ul {
 }
 
 .container { 
-    max-width: 1140px;
-    min-width: 320px; /* ширина основного контента */
-    margin: 0 auto;
-    padding: 0 20px; /* центрирование */
-}
-
-.containerSmall {
-    max-width: 1030px;
+    max-width: 1108px;
     min-width: 320px; /* ширина основного контента */
     margin: 0 auto;
     padding: 0 20px; /* центрирование */
@@ -84,27 +75,4 @@ ul {
    display: block;
    height: 0;
    clear: both;
-}
-
-@font-face {
-    font-family: Intro;
-    src: url('Intro.otf');
-}
-
-::-webkit-scrollbar {
-    width: 10px;
-}
-
-::-webkit-scrollbar-track {
-    background-color: $black;
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: $yellow;
-    border-radius: 8px;
-    border: 2px solid $black; 
-}
-
-::-webkit-input-placeholder {
-    color: white;
 }
