--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,144 +1,5 @@
-$accentColor: rgb(43, 232, 220);
-$darkText: #101010;
-$brightText: #fff;
-$darkBg1: rgb(13, 13, 13);
-$darkBg2: #1A1A1A;
-$brightBg1: #fff;
-$brightBg2: rgb(236, 237, 241);
-
-@font-face {
-    font-family: Plain;
-    src: url(../img/PlainRegular.otf);
-}
-
-.title1 {
-    font-weight: bold;
-    font-size: 104px;
-    line-height: 96%;
-    letter-spacing: -0.04em;
-}
-
-.title2 {
-    font-style: normal;
-    font-weight: 300;
-    font-size: 84px;
-    line-height: 96%;
-    letter-spacing: -0.06em;
-}
-
-.title4 {
-    font-style: normal;
-    font-weight: 300;
-    font-size: 82px;
-    line-height: 151%;
-    letter-spacing: -0.05em;
-}
-
-.title6 {
-    font-style: normal;
-    font-weight: 300;
-    font-size: 80px;
-    line-height: 103%;
-    letter-spacing: -0.04em;
-}
-
-.title5 {
-    font-style: normal;
-    font-weight: 300;
-    font-size: 47px;
-    line-height: 124%;
-}
-
-.title3 {
-    font-style: normal;
-    font-weight: 300;
-    font-size: 12px;
-    line-height: 151%;
-    letter-spacing: 0.02em;
-}
-
-.text3 {
-    font-style: normal;
-    font-weight: 300;
-    font-size: 47px;
-    line-height: 116%;
-}
-
-.text2 {
-    font-style: normal;
-    font-weight: 300;
-    font-size: 30px;
-    line-height: 119%;
-    letter-spacing: -0.03em;
-    
-}
-
-.text5 {
-    font-style: normal;
-    font-weight: 300;
-    font-size: 24px;
-    line-height: 132%;
-}
-
-.text4 {
-    font-style: normal;
-    font-weight: 300;
-    font-size: 18px;
-    line-height: 151%;
-}
-
-.text1 {
-    font-style: normal;
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 151%;
-    letter-spacing: 0.01em;
-}
-
-.link3 {
-    font-style: normal;
-    font-weight: 300;
-    font-size: 18px;
-    line-height: 151%;
-}
-
-.link2 {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 119%;
-}
-
-.link6 {
-    font-style: normal;
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 166%;
-    letter-spacing: 0.02em;
-    text-indent: 1px;
-}
-
-.link5 {
-    font-family: Plain;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 166%;
-    text-indent: 1px;
-}
-
-.link4 {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 116%;
-    letter-spacing: 0.01em;
-}
-
-.link1 {
-    font-style: normal;
-    font-weight: 300;
-    font-size: 12px;
-    line-height: 151%;
-    letter-spacing: 0.02em;
-}
+$black: #001E20;
+$green: #007550;
+$yellow: rgb(255, 200, 86);
+$red: #FF513F;
+$white: #fff;
