--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,8 @@
 }
 
 .header .container {
-  padding: 19px 0;
+  padding-top: 19px;
+  padding-bottom: 19px;
 }
 
 .header .tel {
@@ -249,6 +250,9 @@
 @media (max-width: 768px) {
   .navBar {
     display: none;
+  }
+  .header .burger {
+    justify-self: flex-end;
   }
   .header .tel {
     display: none;
@@ -886,6 +890,14 @@ ul, li {
 }
 
 @media (max-width: 768px) {
+  .row {
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
   .hashtag-title {
     font-size: 26px;
     font-weight: 900;
