--- a/css/_welcome.scss
+++ b/css/_welcome.scss
@@ -105,7 +105,8 @@
     }
 
     .container {
-        padding: 19px 0;
+        padding-top: 19px;
+        padding-bottom: 19px;
     }
 
     .tel {
@@ -241,6 +242,10 @@
     }
 
     .header {
+        .burger {
+            justify-self: flex-end;
+        }
+        
         .tel {
             display: none;
         }
