--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,14 @@
   opacity: 0;
 }
 
-.header .mobMenuList__item {
+.mobMenuList {
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  overflow: hidden;
+}
+
+.mobMenuList__item {
   position: absolute;
   height: 100%;
   width: 100%;
@@ -119,21 +126,20 @@
   z-index: 4;
   -webkit-transition: .5s;
   transition: .5s;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
+  left: 100%;
 }
 
-.header .mobMenuList__item:first-child {
-  -webkit-transform: translateY(74px) translateX(100%);
-          transform: translateY(74px) translateX(100%);
+.mobMenuList__item:first-child {
+  height: calc(100% - 74px);
+  top: 74px;
 }
 
-.header .mobMenuList .courses {
+.mobMenuList .courses {
   background-color: #007550;
   z-index: 5;
 }
 
-.header .mobMenuList .services {
+.mobMenuList .services {
   background-color: #001E20;
   z-index: 5;
 }
@@ -255,7 +261,8 @@
 
 .welcomePage {
   padding: 120px 0 95px;
-  background: url("../assets/welcomePageBg.svg") no-repeat center top/cover;
+  background: url("../assets/welcomeBg.png") no-repeat center center;
+  background-size: auto 100%;
 }
 
 .welcomePage .welcomeSubtitle {
@@ -285,6 +292,7 @@
   font-size: 18px;
   font-weight: 900;
   text-transform: uppercase;
+  margin-top: 10px;
 }
 
 .welcomePage .features__subtitle {
@@ -300,6 +308,18 @@
 
 .welcomePage .comment {
   margin-top: 20px;
+}
+
+@media (max-width: 359px) {
+  .welcomePage .features__title {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 576px) {
+  .welcomePage .hashtag-title {
+    max-width: 235px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -325,6 +345,10 @@
     background: url("../assets/welcomeMobBg.svg") no-repeat right top/cover;
     padding: 60px 0;
   }
+  .welcomePage .container {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
   .welcomePage .hashtag-title {
     margin-bottom: 10px;
   }
@@ -340,10 +364,19 @@
     max-width: 150px;
     margin-right: 0;
   }
+  .welcomePage .features__title:nth-child(even) {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .newLvl {
-  background: url("../assets/newLvlBg.svg") no-repeat right bottom rgba(255, 200, 86, 0.9);
+  background: url("../assets/newLvlBg.png") no-repeat center center;
+  background-size: auto 100%;
   height: 900px;
 }
 
@@ -352,7 +385,8 @@
 }
 
 .newLvl .container {
-  padding: 100px 0;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .newLvl h2 {
@@ -400,7 +434,8 @@
 }
 
 .results {
-  background-color: #007550;
+  background: url("../assets/resultsBg.png") no-repeat center center;
+  background-size: auto 100%;
 }
 
 .results #moreResultsBtn {
@@ -450,7 +485,8 @@
 }
 
 .results .container {
-  padding: 100px 0;
+  padding-top: 100px;
+  padding-bottom: 100px;
   color: #fff;
 }
 
@@ -622,6 +658,10 @@
   border-bottom: 1px dashed #e0e0e0;
 }
 
+.footer .container .upBtn {
+  display: none;
+}
+
 .footer .container .lkBtn {
   margin-top: 8px;
   display: inline-block;
@@ -672,12 +712,57 @@
   margin-bottom: 10px;
 }
 
+@media (max-width: 768px) {
+  .footer .container {
+    padding: 20px 20px 70px 5px;
+  }
+  .footer .row .col-3:nth-last-child(-n+3), .footer .row .footer__logo, .footer .row .lkBtn {
+    display: none;
+  }
+  .footer .row .contacts {
+    font-size: 1px;
+    opacity: 0;
+  }
+  .footer .row .requis {
+    color: #828282;
+    font-size: 18px;
+  }
+  .footer .row .docs {
+    font-size: 16px;
+    color: #bdbdbd;
+  }
+  .footer .row .upBtn {
+    display: block;
+    margin-top: 8px;
+    display: inline-block;
+    z-index: 2;
+    color: #fff;
+    -webkit-transition: .3s;
+    transition: .3s;
+    padding: 10px 45px 12px;
+    position: relative;
+    margin-top: 25px;
+  }
+  .footer .row .upBtn:after {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: -2;
+    left: 0;
+    bottom: 0px;
+    border: 1px solid #fff;
+    border-bottom: 4px solid #fff;
+  }
+}
+
 .price {
   background-color: #ffc856;
 }
 
 .price .container {
-  padding: 100px 0;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .price .container .rulesList {
