--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,9 @@
 .mobMenuList {
   height: 100vh;
   width: 100%;
-  position: absolute;
+  position: fixed;
+  top: 0;
+  z-index: -1;
   overflow: hidden;
 }
 
@@ -123,25 +125,281 @@
   height: 100%;
   width: 100%;
   background-color: #fff;
-  z-index: 4;
+  z-index: 9;
   -webkit-transition: .5s;
   transition: .5s;
   left: 100%;
 }
 
 .mobMenuList__item:first-child {
-  height: calc(100% - 74px);
-  top: 74px;
+  height: calc(100% - 60px);
+  top: 60px;
+}
+
+.mobMenuList .mainMenu {
+  text-transform: uppercase;
+  padding: 20px;
+}
+
+.mobMenuList .mainMenu .pagesList {
+  margin-top: 25px;
+  font-size: 20px;
+  margin-bottom: 64px;
+  color: #4f4f4f;
+}
+
+.mobMenuList .mainMenu .pagesList .active {
+  display: inline-block;
+  color: #001E20;
+  font-weight: 500;
+  border-bottom: 2px solid #001E20;
+  border-top: 2px solid #001E20;
+  padding-top: 2px;
+}
+
+.mobMenuList .mainMenu .pagesList li:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.mobMenuList .mainMenu .toList {
+  font-size: 18px;
+  font-weight: 900;
+}
+
+.mobMenuList .mainMenu .toList li:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.mobMenuList .mainMenu .toList li:nth-child(1) {
+  color: #001E20;
+}
+
+.mobMenuList .mainMenu .toList li:nth-child(2) {
+  color: #007550;
+}
+
+.mobMenuList .mainMenu .toList li:nth-child(3) {
+  color: #ffc856;
+}
+
+.mobMenuList .mainMenu .toList li:nth-child(4) {
+  color: #FF513F;
+}
+
+.mobMenuList .mainMenu .lkBtn {
+  text-transform: none;
+  font-size: 18px;
+  color: #f2f2f2;
+  padding: 7px 13px 9px;
+  background: #001E20;
+  border: 1px solid #001E20;
+  position: relative;
+  margin-top: 25px;
+  display: inline-block;
+  font-family: "Roboto", sans-serif;
+}
+
+.mobMenuList .mainMenu .lkBtn:after {
+  width: calc(100% - 2px);
+  position: absolute;
+  left: 1px;
+  bottom: 1px;
+  content: "";
+  background-color: #f2f2f2;
+  height: 3px;
+}
+
+.mobMenuList .navMenu {
+  background-color: #ffc856;
+  z-index: 12;
+  padding: 40px;
+  color: #001E20;
+  font-size: 18px;
+}
+
+.mobMenuList .navMenu .navList {
+  text-transform: uppercase;
+  margin-top: 40px;
+}
+
+.mobMenuList .navMenu .navList .active {
+  font-weight: 600;
+  position: relative;
+}
+
+.mobMenuList .navMenu .navList .active:after {
+  content: "";
+  position: absolute;
+  border: 10px solid transparent;
+  border-left: 20px solid #007550;
+  left: -28px;
+  top: 1px;
+  height: 21px;
+  width: 19px;
+}
+
+.mobMenuList .navMenu .navList li:not(:last-child) {
+  margin-bottom: 7px;
+}
+
+.mobMenuList .navMenu .navList li a:hover {
+  color: #001E20;
+}
+
+.mobMenuList .navMenu .menuBtns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .mobMenuList .courses {
   background-color: #007550;
-  z-index: 5;
+  z-index: 12;
+  padding: 40px;
+  color: #fff;
+  font-size: 18px;
+}
+
+.mobMenuList .courses .menuTitle {
+  font-size: 24px;
+  font-weight: 900;
+  text-transform: uppercase;
+  margin-top: 40px;
+  margin-bottom: 30px;
+}
+
+.mobMenuList .courses .coursesList {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.mobMenuList .courses .coursesList li a {
+  border-bottom: 1px dashed #fff;
+}
+
+.mobMenuList .courses .coursesList li a:hover {
+  color: #fff;
+}
+
+.mobMenuList .courses .coursesList li:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.mobMenuList .courses .menuBtns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .mobMenuList .services {
   background-color: #001E20;
-  z-index: 5;
+  z-index: 12;
+  padding: 40px;
+  color: #fff;
+  font-size: 18px;
+}
+
+.mobMenuList .services .menuTitle {
+  font-size: 24px;
+  font-weight: 900;
+  text-transform: uppercase;
+  margin-top: 40px;
+  margin-bottom: 30px;
+}
+
+.mobMenuList .services .servicesList {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.mobMenuList .services .servicesList li {
+  max-width: 250px;
+}
+
+.mobMenuList .services .servicesList li a {
+  border-bottom: 1px dashed #fff;
+}
+
+.mobMenuList .services .servicesList li a:hover {
+  color: #fff;
+}
+
+.mobMenuList .services .servicesList li:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.mobMenuList .services .menuBtns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.mobMenuList .contactsMenu {
+  background-color: #fff;
+  z-index: 12;
+  padding: 40px;
+  color: #4f4f4f;
+  font-size: 18px;
+}
+
+.mobMenuList .contactsMenu .menuTitle {
+  font-size: 24px;
+  font-weight: 900;
+  text-transform: uppercase;
+  margin-top: 40px;
+  margin-bottom: 25px;
+  color: #FF513F;
+}
+
+.mobMenuList .contactsMenu a {
+  font-size: 24px;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.mobMenuList .contactsMenu a:hover {
+  color: inherit;
+}
+
+.mobMenuList .contactsMenu a:first-child {
+  margin-bottom: 0;
+  font-size: 28px;
+}
+
+.mobMenuList .contactsMenu .menuBtns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  background-color: #fff;
+  z-index: 7;
 }
 
 .header .container {
@@ -155,7 +413,7 @@
 
 .header .burger {
   display: none;
-  z-index: 10;
+  z-index: 8;
 }
 
 .header .rotateRight {
@@ -263,6 +521,7 @@
   padding: 120px 0 95px;
   background: url("../assets/welcomeBg.png") no-repeat center center;
   background-size: auto 100%;
+  margin-top: 136px;
 }
 
 .welcomePage .welcomeSubtitle {
@@ -322,9 +581,23 @@
   }
 }
 
+@media (min-width: 769px) {
+  .mobMenuList {
+    display: none;
+  }
+}
+
 @media (max-width: 768px) {
   .navBar {
     display: none;
+  }
+  .header .container {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  .header .container .header__logo {
+    width: 100px;
+    height: 30px;
   }
   .header .burger {
     justify-self: flex-end;
@@ -344,25 +617,37 @@
   .welcomePage {
     background: url("../assets/welcomeMobBg.svg") no-repeat right top/cover;
     padding: 60px 0;
+    margin-top: 60px;
   }
   .welcomePage .container {
     padding-left: 5px;
     padding-right: 5px;
   }
+  .welcomePage .features__item:not(:nth-last-child(-n+2)) {
+    margin-bottom: 21px;
+  }
+  .welcomePage .features__item:nth-child(even) * {
+    position: relative;
+    left: 10px;
+  }
   .welcomePage .hashtag-title {
     margin-bottom: 10px;
+    font-size: 36px;
+    line-height: 1.24;
   }
   .welcomePage .welcomeSubtitle {
+    line-height: 1.4;
     display: inline-block;
     color: #007550;
     text-transform: uppercase;
     font-size: 12px;
     font-weight: 700;
-    margin-bottom: 40px;
+    margin-bottom: 38px;
   }
   .welcomePage .features__title {
     max-width: 150px;
     margin-right: 0;
+    line-height: 1.25;
   }
   .welcomePage .features__title:nth-child(even) {
     display: -webkit-box;
@@ -372,15 +657,29 @@
         -ms-flex-pack: center;
             justify-content: center;
   }
+  .welcomePage .features__subtitle {
+    line-height: 1.22;
+  }
+  .welcomePage .comment {
+    margin-top: 42px;
+    line-height: 1.12;
+  }
 }
 
 .newLvl {
   background: url("../assets/newLvlBg.png") no-repeat center center;
   background-size: auto 100%;
-  height: 900px;
 }
 
-.newLvl .col-7 {
+.newLvl .sub__mobile {
+  display: none;
+}
+
+.newLvl .sub__desktop {
+  display: block;
+}
+
+.newLvl .col-12 {
   padding: 0;
 }
 
@@ -389,12 +688,12 @@
   padding-bottom: 100px;
 }
 
-.newLvl h2 {
+.newLvl .hashtag-title {
   margin-bottom: 50px;
   text-transform: uppercase;
 }
 
-.newLvl h2 span {
+.newLvl .hashtag-title span {
   color: #007550;
 }
 
@@ -490,11 +789,11 @@
   color: #fff;
 }
 
-.results .container .title h2 {
+.results .container .hashtag-title {
   margin-bottom: 50px;
 }
 
-.results .container .title .subtitle {
+.results .container .subtitle {
   margin-bottom: 10px;
 }
 
@@ -504,72 +803,84 @@
 }
 
 .results .container .resultsList__item {
-  height: 201px;
+  height: 200px;
 }
 
 .results .container .resultsList__item:not(:last-child) {
   margin-bottom: 30px;
 }
 
-.results .container .resultsList__item .col-xl-4 {
+.results .container .resultsList__item .person {
   background-color: #001E20;
   padding: 20px 20px 30px;
   text-transform: uppercase;
 }
 
-.results .container .resultsList__item .col-xl-4 .ava {
-  margin-bottom: 25px;
+.results .container .resultsList__item .person .ava {
+  width: 80px;
+  height: 80px;
+  position: relative;
+  overflow: hidden;
 }
 
-.results .container .resultsList__item .col-xl-4 .ava img {
+.results .container .resultsList__item .person .ava .avaBorder {
+  background: url("../assets/avaBorder.svg") no-repeat center;
+  width: 80px;
+  height: 80px;
+  position: relative;
+  z-index: 2;
+}
+
+.results .container .resultsList__item .person .ava img {
   border-radius: 50%;
-  max-width: 80px;
-  max-height: 80px;
-  border: 5px solid #fff;
+  z-index: 1;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 
-.results .container .resultsList__item .col-xl-4 .ava .prof {
+.results .container .resultsList__item .person .prof {
   font-size: 14px;
-  max-width: 110px;
   margin-left: 30px;
   letter-spacing: .3px;
+  padding: 0;
+  margin: 0;
 }
 
-.results .container .resultsList__item .col-xl-4 .ava .prof p {
+.results .container .resultsList__item .person .prof p {
   font-weight: 900;
   font-size: 24px;
   line-height: 1.3;
   letter-spacing: 1px;
 }
 
-.results .container .resultsList__item .col-xl-4 .descr {
+.results .container .resultsList__item .person .achiev {
+  margin-left: 47px;
   font-size: 14px;
   line-height: 1;
   padding-left: 17px;
+  padding: 0;
+  margin: 0;
 }
 
-.results .container .resultsList__item .col-xl-4 .descr .achiev {
-  margin-left: 47px;
-}
-
-.results .container .resultsList__item .col-xl-4 .descr .achiev p {
+.results .container .resultsList__item .person .achiev p {
   font-size: 34px;
   font-weight: 700;
   line-height: 1.1;
 }
 
-.results .container .resultsList__item .col-xl-8 {
+.results .container .resultsList__item .review {
   background-color: #fff;
   color: black;
   padding: 20px;
   position: relative;
 }
 
-.results .container .resultsList__item .col-xl-8 .text {
+.results .container .resultsList__item .review .text {
   line-height: 1.1;
 }
 
-.results .container .resultsList__item .col-xl-8 a {
+.results .container .resultsList__item .review a {
   position: absolute;
   right: 20px;
   bottom: 15px;
@@ -584,7 +895,7 @@
   transition: .3s;
 }
 
-.results .container .resultsList__item .col-xl-8 a:after {
+.results .container .resultsList__item .review a:after {
   position: absolute;
   content: "";
   top: -3px;
@@ -596,7 +907,7 @@
   transition: .3s;
 }
 
-.results .container .resultsList__item .col-xl-8 a:hover:after {
+.results .container .resultsList__item .review a:hover:after {
   width: 100%;
 }
 
@@ -616,6 +927,156 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+}
+
+@media (max-width: 768px) {
+  .newLvl {
+    background: #ffc856;
+    position: relative;
+  }
+  .newLvl .comment {
+    position: absolute;
+    right: 6%;
+    top: 243px;
+    font-size: 12px;
+  }
+  .newLvl .define__item {
+    background-size: 8px 10px;
+    line-height: 1.16;
+  }
+  .newLvl .define__item:not(:last-child) {
+    margin-bottom: 13px;
+  }
+  .newLvl .problem {
+    line-height: 1.25;
+  }
+  .newLvl .hashtag-title {
+    margin-bottom: 20px;
+  }
+  .newLvl .intro {
+    line-height: 1.25;
+    background: #FDD762;
+  }
+  .newLvl .intro .subtitle {
+    font-weight: 700;
+  }
+  .newLvl .intro .container {
+    padding-bottom: 40px;
+    padding-top: 50px;
+    background: url("../assets/introMobBg.svg") no-repeat center left;
+    background-size: auto 100%;
+  }
+  .newLvl .intro .sub__mobile {
+    display: block;
+  }
+  .newLvl .intro .sub__desktop {
+    display: none;
+  }
+  .newLvl .container {
+    position: relative;
+    padding-top: 40px;
+    padding-bottom: 96px;
+  }
+  .newLvl .row .col-12 {
+    padding: 0;
+  }
+  .results {
+    background: url("../assets/resultsMobBg.svg") no-repeat center/cover;
+    line-height: 1.25;
+  }
+  .results #moreResultsBtn {
+    font-size: 16px;
+    padding: 14px 30px 15px;
+  }
+  .results .container {
+    padding-top: 50px;
+  }
+  .results .container .hashtag-title {
+    margin-bottom: 20px;
+  }
+  .results .container .col-12 {
+    padding: 0;
+  }
+  .results .container .resultsList {
+    margin-top: 50px;
+    margin-bottom: 40px;
+  }
+  .results .container .resultsList__item {
+    height: 157px;
+  }
+  .results .container .resultsList__item:not(:last-child) {
+    margin-bottom: 40px;
+  }
+  .results .container .resultsList__item .person {
+    padding: 10px 10px 20px;
+    height: 157px;
+  }
+  .results .container .resultsList__item .person .ava {
+    -webkit-box-ordinal-group: -1;
+        -ms-flex-order: -2;
+            order: -2;
+  }
+  .results .container .resultsList__item .person .prof {
+    font-size: 12px;
+    max-height: 37px;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    position: relative;
+    top: 1px;
+  }
+  .results .container .resultsList__item .person .prof .name {
+    font-size: 18px;
+    letter-spacing: normal;
+  }
+  .results .container .resultsList__item .person .vkLink {
+    width: 37px;
+    height: 37px;
+    margin-right: 10px;
+  }
+  .results .container .resultsList__item .person .achiev {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+    margin-left: 10px;
+    max-width: 200px;
+    max-height: 80px;
+    font-size: 12px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .results .container .resultsList__item .person .achiev p {
+    font-size: 30px;
+    margin-top: 2px;
+  }
+  .results .container .resultsList__item .person .break {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    height: 0;
+  }
+  .results .container .resultsList__item .review {
+    padding-bottom: 30px;
+  }
+  .results .container .resultsList__item .review a {
+    position: relative;
+    font-size: 18px;
+    padding-right: 17px;
+    font-weight: 500;
+    color: #333;
+    text-transform: none;
+    right: 0;
+    bottom: 0;
+    margin-top: 20px;
+    display: inline-block;
   }
 }
 
@@ -788,7 +1249,6 @@
 
 .price .container .rulesList__item .text {
   line-height: 0.9;
-  height: 30px;
 }
 
 .price .container .rulesList__item .text span {
@@ -806,12 +1266,12 @@
 
 .price .container .cardsList {
   text-transform: uppercase;
+  width: 100%;
 }
 
 .price .container .cardsList li {
   background-color: #fff;
   padding: 35px 30px 30px;
-  max-width: 457px;
   max-height: 280px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -947,6 +1407,82 @@
   transition: .4s ease;
 }
 
+@media (max-width: 768px) {
+  .price .container {
+    padding-top: 50px;
+  }
+  .price .container .rulesList {
+    margin-top: 40px;
+  }
+  .price .container .rulesList__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+  .price .container .rulesList__item .text {
+    line-height: 1.1;
+  }
+  .price .container .rulesList__item .text span {
+    color: #FF513F;
+  }
+  .price .container .rulesList__item .point {
+    font-size: 36px;
+    min-width: 30px;
+    display: block;
+    text-align: center;
+    margin-right: 10px;
+    line-height: 0.8;
+    position: relative;
+  }
+  .price .container .sale {
+    margin-top: 60px;
+    margin-bottom: 20px;
+  }
+  .price .container .cardsList {
+    padding: 0;
+  }
+  .price .container .cardsList li {
+    padding: 30px 20px 20px;
+  }
+  .price .container .cardsList li:nth-child(odd) {
+    margin-right: 0;
+  }
+  .price .container .cardsList li:nth-child(2) {
+    background-position: 94% 40%;
+  }
+  .price .container .cardsList li:nth-child(3) {
+    background-position: 96% 40%;
+    padding: 20px 11px 20px;
+  }
+  .price .container .cardsList li:nth-child(4) {
+    padding: 20px 12px 20px;
+    background-position: 96% 40%;
+    background-size: 27% 27%;
+  }
+  .price .container .cardsList li:first-child .cardPrice {
+    margin-bottom: 60px;
+  }
+  .price .container .cardsList li:nth-child(-n+2) {
+    margin-bottom: 0;
+  }
+  .price .container .cardsList li:not(:last-child) {
+    margin-bottom: 20px;
+  }
+  .price .container .cardsList li .cardPrice {
+    font-size: 42px;
+    line-height: 1.3;
+    margin-bottom: 28px;
+  }
+  .price .container .cardsList .gift {
+    margin-bottom: 10px;
+  }
+  .price .container .cardsList .gift span {
+    border: none;
+  }
+  .price .container .cardsList .chooseOptionBtn {
+    font-size: 16px;
+    padding: 13px 14px 13px;
+  }
+}
+
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -1039,12 +1575,12 @@ ul, li {
     padding-right: 20px;
   }
   .hashtag-title {
-    font-size: 36px;
+    font-size: 26px;
     font-weight: 900;
   }
   .subtitle {
     font-size: 18px;
-    font-weight: 900;
+    font-weight: 700;
   }
   .text {
     font-family: "Roboto", sans-serif;
